# adventofcode

./: .gitignore  LICENSE  README.md  justfile
2022/CSharp/day01/: Program.cs
2022/FSharp/: .gitignore
2022/FSharp/day01/: Program.fs
2022/FSharp/day03/: Program.fs
2022/Rust/day12/: Cargo.toml
2022/Rust/day25/: Cargo.toml
2023/Go/day02/: day02  hello.go
2023/Haskell/day09/: Main.hs
2023/Haskell/day15/: Main.hs
2023/Rust/day01/: Cargo.toml
2023/Rust/day02/: Cargo.toml
2023/Rust/day03/: Cargo.toml
2023/Rust/day04/: Cargo.toml
2023/Rust/day05/: Cargo.toml
2023/Rust/day06/: Cargo.toml
2023/Rust/day07/: Cargo.toml
2023/Rust/day08/: Cargo.toml
2023/Rust/day08/benches/: part1.rs  part2.rs
2023/Rust/day08/src/: lib.rs  part1.rs  part2.rs
2023/Rust/day09/: Cargo.toml
2023/Rust/day10/: Cargo.toml
2023/Rust/day11/: Cargo.toml
2023/Rust/day12/: Cargo.toml
2023/Rust/day13/: Cargo.toml
2023/Rust/day14/: Cargo.toml
2023/Rust/day15/: Cargo.toml
2023/Rust/day16/: Cargo.toml
2023/Rust/day17/: Cargo.toml
2023/Rust/day18/: Cargo.toml
2023/Rust/day19/: Cargo.toml
2023/Rust/day20/: Cargo.toml
2023/Rust/day21/: Cargo.toml
2024/Elixir/day07/: .gitignore  mix.exs
2024/Elixir/day08/: .gitignore  mix.exs
2024/Elixir/day11/: .gitignore  mix.exs
2024/Gleam/day19/: gleam.toml  manifest.toml
2024/Rust/day01/: .gitignore  justfile
2024/Rust/day03/: Cargo.toml  justfile
2024/Rust/day06/: Cargo.toml
2024/Rust/day06/benches/: part1.rs  part2.rs
2024/Rust/day06/src/: lib.rs  part1.rs  part2.rs
2024/Rust/day13/: Cargo.toml  note.txt
2024/Rust/day13/benches/: part1.rs  part2.rs
2024/Rust/day13/src/: lib.rs  part1.rs  part2.rs
2024/Rust/day21/: Cargo.toml
2024/Rust/day21/benches/: part1.rs  part2.rs
2024/Rust/day21/src/: lib.rs  part1.rs
2024/day01/: .gitignore
Rust/day01/src/: main.rs
(+221 files in other folders)
