[package]
name = "day13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
miette = "7"
ndarray = "0.15"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"]}
tracing = "0.1"
tracing-subscriber = "0.3"
winnow = "0.6.20"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "part1"
harness = false

[[bench]]
name = "part2"
harness = false
