[package]
name = "day21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.7.3"
itertools = "0.13.0"
miette = "7"
serde_json = "1.0.134"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "part1"
harness = false

[[bench]]
name = "part2"
harness = false
